--- a/charts/guard/templates/routing/httproute-subdomain.yaml
+++ b/charts/guard/templates/routing/httproute-subdomain.yaml
@@ -43,8 +43,8 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 
 metadata:
-  # eg. eth-subdomain-route
-  name: {{ .serviceId | lower }}-subdomain-route
+  # eg. guard-subdomain-eth
+  name: {{ $.Values.fullnameOverride | default "guard" }}-subdomain-{{ .serviceId }}
   namespace: {{ $.Values.global.namespace }}
 
 spec:
@@ -70,7 +70,33 @@ spec:
     # This is to prevent nil pointer errors when the traffic splitting
     # configuration is not set for a service.
     {{- $ts := default dict .trafficSplitting }}
+    {{- $failover := default dict .failover }}
     - backendRefs:
+        # -- FAILOVER CONFIGURATION --
+        # If failover is enabled, use Backend resources instead of direct service references
+        {{- if eq $failover.enabled true }}
+        - group: gateway.envoyproxy.io
+          kind: Backend
+          name: {{ .serviceId }}-primary
+          namespace: {{ $.Values.global.namespace }}
+          filters:
+          - type: RequestHeaderModifier
+            requestHeaderModifier:
+              set:
+              - name: target-service-id
+                value: "{{ .serviceId }}"
+        - group: gateway.envoyproxy.io
+          kind: Backend
+          name: {{ .serviceId }}-fallback
+          namespace: {{ $.Values.global.namespace }}
+          filters:
+          - type: RequestHeaderModifier
+            requestHeaderModifier:
+              set:
+              - name: target-service-id
+                value: "{{ .serviceId }}"
+        {{- else }}
+        # -- STANDARD TRAFFIC ROUTING --
         - name: {{ $.Values.global.serviceName }}
           namespace: {{ $.Values.global.namespace }}
           port: {{ $.Values.global.port }}
@@ -108,7 +134,7 @@ spec:
               set:
               - name: target-service-id
                 value: "{{ .serviceId }}"
-
+        {{- end }}
         {{- end }}
       filters:
         - type: RequestHeaderModifier
