Fix path values service ids (#104)
Update PATH chart's values file: correct the service ID for `xrplevm`
and `xrplevm-testnet`

--- a/charts/path/values.yaml
+++ b/charts/path/values.yaml
@@ -244,7 +244,11 @@ guard:
     - serviceId: taiko
     - serviceId: taiko-hek-test
     - serviceId: tron
-    - serviceId: xrpl-evm-test
+    - serviceId: xrplevm
+    - serviceId: xrplevm-testnet
+      aliases:
+        - xrpl-evm-testnet
+        - xrpl-evm-test
     - serviceId: zklink-nova
     - serviceId: zksync-era
 
