--- a/charts/guard/templates/routing/backend-traffic-policy.yaml
+++ b/charts/guard/templates/routing/backend-traffic-policy.yaml
@@ -14,7 +14,7 @@ spec:
   targetRefs:
     - group: gateway.networking.k8s.io
       kind: HTTPRoute
-      name: {{ $.Values.fullnameOverride | default "guard" }}-subdomain-{{ .serviceId }}
+      name: {{ .serviceId | lower }}-subdomain-route
   {{- toYaml .failover.trafficPolicySpec | nindent 2 }}
 {{- end }}
 {{- end }}
