--- a/charts/guard/templates/routing/backend-resources.yaml
+++ b/charts/guard/templates/routing/backend-resources.yaml
@@ -87,5 +87,35 @@ spec:
   {{- toYaml .failover.backendSpec | nindent 2 }}
   {{- end }}
 {{- end }}
+{{- $ts := default dict .trafficSplitting }}
+{{- if and (eq $ts.enabled true) $ts.external }}
+{{- range $index, $external := $ts.external }}
+{{- if gt (default 0 $external.weight) 0 }}
+---
+apiVersion: gateway.envoyproxy.io/v1alpha1
+kind: Backend
+metadata:
+  name: {{ $.serviceId }}-external-{{ $index }}
+  namespace: {{ $.Values.global.namespace | default "path" }}
+  labels:
+    {{- include "guard.labels" $ | nindent 4 }}
+    service-id: {{ $.serviceId }}
+spec:
+  endpoints:
+  - fqdn:
+      hostname: {{ regexReplaceAll "^https?://" $external.url "" | regexReplaceAll ":.*$" "" }}
+      {{- $url := regexFind ":[0-9]+$" $external.url }}
+      {{- if $url }}
+      port: {{ trimPrefix ":" $url | int }}
+      {{- else }}
+      {{- if hasPrefix "https://" $external.url }}
+      port: 443
+      {{- else }}
+      port: 80
+      {{- end }}
+      {{- end }}
+{{- end }}
+{{- end }}
+{{- end }}
 {{- end }}
 {{- end }}
