try url rewrite for external backends

--- a/charts/guard/examples/traffic-splitting-with-external.yaml
+++ b/charts/guard/examples/traffic-splitting-with-external.yaml
@@ -1,6 +1,11 @@
 # Traffic Splitting with External Endpoints
 # This example shows how to configure traffic splitting with external IP addresses and hostnames
-
+#
+# When requests are sent to external backends, the /v1/<appid> prefix is automatically
+# stripped. For example:
+#   - Request to: https://xrpl-evm-testnet.rpc.grove.city/v1/0caa84c4
+#   - Forwarded to external backend as: http://45.77.195.1:8545/
+#
 services:
   # Example with IP address
   - serviceId: xrplevm-testnet
