--- a/charts/guard/templates/routing/httproute-subdomain.yaml
+++ b/charts/guard/templates/routing/httproute-subdomain.yaml
@@ -149,6 +149,12 @@ spec:
               set:
               - name: target-service-id
                 value: "{{ $service.serviceId }}"
+          # Add URLRewrite filter only for external backends
+          - type: URLRewrite
+            urlRewrite:
+              path:
+                type: ReplacePrefixMatch
+                replacePrefixMatch: /
         {{- end }}
         {{- end }}
         {{- end }}
