ReplaceRegexMatch support only

--- a/charts/guard/templates/routing/httproutefilter-external-rewrite.yaml
+++ b/charts/guard/templates/routing/httproutefilter-external-rewrite.yaml
@@ -21,8 +21,10 @@ metadata:
 spec:
   urlRewrite:
     path:
-      type: ReplacePrefixMatch
-      replacePrefixMatch: "/"
+      type: ReplaceRegexMatch
+      replaceRegexMatch:
+        pattern: "^/v1/[^/]+"
+        substitution: ""
 {{- end }}
 {{- end }}
 {{- end }}
