--- a/charts/guard/templates/routing/backend-resources.yaml
+++ b/charts/guard/templates/routing/backend-resources.yaml
@@ -94,6 +94,7 @@ spec:
       hostname: {{ $external.hostname }}
       port: {{ $external.port }}
   {{- end }}
+  appProtocol: HTTP
 {{- end }}
 {{- end }}
 {{- end }}
