--- a/charts/path/templates/deployment.yaml
+++ b/charts/path/templates/deployment.yaml
@@ -54,6 +54,9 @@ spec:
       {{- with $.Values.global.securityContext }}
       securityContext: {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with $.Values.path.podSecurityContext }}
+      securityContext: {{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- with $.Values.global.serviceAccount.name }}
       serviceAccountName: {{ . }}
       {{- end }}
