--- a/charts/path/values.yaml
+++ b/charts/path/values.yaml
@@ -147,17 +147,7 @@ guard:
   # - References:
   #   - https://github.com/envoyproxy/gateway/tree/main/charts/gateway-helm#values
   #   - https://github.com/envoyproxy/gateway/blob/main/charts/gateway-helm/values.tmpl.yaml
-  gateway-helm:
-    config:
-      envoyGateway:
-        # Rate Limiting:
-        # - Required to enable rate limiting.
-        # - Updates Envoy Gateway config to use Redis as backend.
-        rateLimit:
-          backend:
-            type: Redis
-            redis:
-              url: redis:6379
+  # gateway-helm:
 
   fullnameOverride: guard
   global:
