make k8s api happy on new infa

--- a/charts/guard/templates/auth-grove/security-policy.yaml
+++ b/charts/guard/templates/auth-grove/security-policy.yaml
@@ -31,7 +31,9 @@ spec:
   extAuth:
     grpc:
       backendRefs:
-        - name: {{$name}}-peas
+        - group: ""
+          kind: Service
+          name: {{$name}}-peas
           port: {{ $.Values.auth.groveLegacy.peas.port }}
 
 # Create a security policy for the header route.
@@ -51,7 +53,9 @@ spec:
   extAuth:
     grpc:
       backendRefs:
-        - name: {{$name}}-peas
+        - group: ""
+          kind: Service
+          name: {{$name}}-peas
           port: {{ $.Values.auth.groveLegacy.peas.port }}
 
 {{- end }}
