--- a/charts/guard/templates/routing/httproute-healthz-no-prefix.yaml
+++ b/charts/guard/templates/routing/httproute-healthz-no-prefix.yaml
@@ -26,6 +26,7 @@ spec:
           name: {{ $.Values.healthCheck.serviceName | default $.Values.global.serviceName }}
           namespace: {{ $.Values.healthCheck.namespace | default $.Values.global.namespace }}
           port: {{ $.Values.healthCheck.port | default $.Values.global.port }}
+          weight: 1
       matches:
         - path:
             type: Exact
